Fixing whitespace on overscroll

--- a/src/index.css
+++ b/src/index.css
@@ -32,13 +32,23 @@
 	}
 }
 
+html {
+	overflow: hidden;
+	height: 100%;
+}
+
+body {
+	overflow: auto;
+	height: 100%;
+}
+
 html,
 body {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 	font-family: 'Roboto', sans-serif;
-	overscroll-behavior: none;
+	/* overscroll-behavior: none; */
 }
 
 ul > li > a.nav-link-active {
